@@ -2,6 +2,7 @@
 v6.0.4-git
 ----------
 
+[mms] Hide attachment upload UI in dynamic view if file uploads are disabled.
 [jan] Fix JavaScript errors with Internet Explorer 8.
 [mms] Fix display of mail log icons on the basic message page (Bug #11964).
 [jan] Fix stripping attachments in dynamic view (aarno.sandvik@helsinki.fi,
